# language-transfer-flashcards

./: README.md  pyproject.toml
.github/workflows/: CI.yaml
ltf/: __init__.py  cli.py  config.py  language_transfer_flashcards.py  models.py  utils.py  youtube_transcript.py
ltf/cli/: cli.py  validate.py
ltf/data/: prompt.yaml
tests/: test_cli.py  test_models.py  test_utils.py  test_youtube_transcript.py
