[tool.poetry]
name = "language-transfer-flashcards"
version = "0.1.0"
description = ""
authors = ["Tendai <tendai.charura@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
